[gd_scene format=3 uid="uid://doiasnbwyue7p"]

[ext_resource type="Script" uid="uid://oik0tcn4gt4q" path="res://Script/main_gam.gd" id="1_dpqbi"]

[node name="main_gam" type="Control" unique_id=1548931786]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpqbi")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="." unique_id=78228583]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Header" type="Panel" parent="." unique_id=1730702450]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="Header" unique_id=824342037]
layout_mode = 1
offset_right = 61.0
offset_bottom = 23.0
text = "Score: 0"

[node name="ManualButton" type="Button" parent="Header" unique_id=1071067475]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Open Manual"

[node name="BrowserArea" type="Panel" parent="." unique_id=610108370]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 62.0
offset_right = 1153.0
grow_vertical = 2

[node name="URLBar" type="LineEdit" parent="BrowserArea" unique_id=1078502938]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
text = "http://www.g00gle.com"

[node name="WebContent" type="RichTextLabel" parent="BrowserArea" unique_id=1336610362]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_right = -259.0
grow_horizontal = 2
grow_vertical = 2

[node name="FakePopup" type="Panel" parent="BrowserArea" unique_id=1565610654]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 217.0
offset_right = 164.0
offset_bottom = 342.0

[node name="Label" type="Label" parent="BrowserArea/FakePopup" unique_id=92963043]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Allow notifications?"

[node name="FakePopupButton" type="Button" parent="BrowserArea/FakePopup" unique_id=698305292]
layout_mode = 0
offset_top = 77.0
offset_right = 61.0
offset_bottom = 125.0
text = "Yes"

[node name="InvestigationPanel" type="VBoxContainer" parent="." unique_id=357261746]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -253.0
offset_top = 93.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="QuestionLabel" type="Label" parent="InvestigationPanel" unique_id=1610207243]
layout_mode = 2
text = "What is wrong with this website?"

[node name="CheckboxContainer" type="VBoxContainer" parent="InvestigationPanel" unique_id=425859131]
layout_mode = 2

[node name="Chk_SuspiciousURL" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1309455319]
layout_mode = 2
text = "Suspicious URL"

[node name="Chk_Unsecure" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=586769217]
layout_mode = 2
text = "Unsecure Connection (HTTP)"

[node name="Chk_UrgentTone" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1189726748]
layout_mode = 2
text = "Urgent/Threatening Tone"

[node name="Chk_FakeDesign" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1768472147]
layout_mode = 2
text = "Poor/Fake Design"

[node name="Chk_Safe" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=804422185]
layout_mode = 2
text = "This website is Safe"

[node name="Chk_Popups" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1370639984]
layout_mode = 2
text = "Intrusive Pop-ups"

[node name="Chk_HiddenLinks" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1239728942]
layout_mode = 2
text = "Hidden/Overlaid Links"

[node name="Chk_Permissions" type="CheckBox" parent="InvestigationPanel/CheckboxContainer" unique_id=1851363674]
layout_mode = 2
text = "Suspicious Permission Request"

[node name="SubmitButton" type="Button" parent="InvestigationPanel" unique_id=1241887156]
layout_mode = 2
text = "Send"

[node name="FeedbackPopup" type="AcceptDialog" parent="." unique_id=975523799]
oversampling_override = 1.0

[node name="ManualPopup" type="Window" parent="." unique_id=77942657]
oversampling_override = 1.0
position = Vector2i(0, 36)
size = Vector2i(400, 400)
visible = false

[node name="ManualText" type="RichTextLabel" parent="ManualPopup" unique_id=802224894]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][b][font_size=20]CYBERSECURITY GUIDE[/font_size][/b][/center]

To identify a dangerous website, look for these [b]4 Red Flags[/b]:

1. [b]Suspicious URL (Typosquatting):[/b]
Hackers use URLs that look like real ones but have small changes. 
Example: [i]g00gle.com[/i] instead of [i]google.com[/i], or [i]paypaI.com[/i] (with a capital 'i').

2. [b]Unsecure Connection (HTTP):[/b]
Safe websites use [color=green]HTTPS[/color] (Secure). If the URL starts with [color=red]HTTP[/color], your data is not encrypted and can be stolen.

3. [b]Urgent or Threatening Tone:[/b]
Scammers want you to act fast without thinking. Look for words like: \"Urgent\", \"Suspended\", \"Final Warning\", or \"Win $1,000,000 Now!\".

4. [b]Poor/Fake Design:[/b]
Check for low-quality images, spelling mistakes, or weird layouts that don't look professional.

[b]HOW TO PLAY:[/b]
- Analyze the website.
- Check all the boxes that apply.
- If the site is perfect, check only [b]\"This website is Safe\"[/b].
- Press \"Analyze\" to submit."

[connection signal="pressed" from="Header/ManualButton" to="." method="_on_manual_button_pressed"]
[connection signal="pressed" from="BrowserArea/FakePopup/FakePopupButton" to="." method="_on_fake_popup_clicked"]
[connection signal="toggled" from="InvestigationPanel/CheckboxContainer/Chk_Safe" to="." method="_on_safe_toggled"]
[connection signal="pressed" from="InvestigationPanel/SubmitButton" to="." method="_on_submit_pressed"]
[connection signal="confirmed" from="FeedbackPopup" to="." method="next_level"]
